k8s/apps/mailserver/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcalf
  labels: &labels
    app.kubernetes.io/name: mailcalf
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        kubernetes.io/hostname: mail

      tolerations:
        - key: "ip-reputation"
          operator: "Equal"
          value: "mailserver"

      volumes:
        - name: conf
          emptyDir: {}
        - name: conf-configmap
          configMap:
            name: mailserver
        - name: conf-secret
          secret:
            secretName: mailserver
        - name: tls
          secret:
            secretName: tls-mail.ftsell.de
        - name: mails
          persistentVolumeClaim:
            claimName: mailserver-mails
        - name: data
          persistentVolumeClaim:
            claimName: mailserver-data

      containers:
        - name: mailcalf
          image: ghcr.io/ftsell/mailcalf
          imagePullPolicy: Always
          stdin: true
          ports:
            - name: smtp
              containerPort: 25
            - name: smtp-haproxy
              containerPort: 26
            - name: submission
              containerPort: 587
            - name: imaps
              containerPort: 993
            - name: rspamd-admin
              containerPort: 11334
            - name: sieve-manage
              containerPort: 4190
          volumeMounts:
            - name: conf
              mountPath: /app/conf
            - name: tls
              mountPath: /app/ssl
            - name: mails
              mountPath: /app/mail
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: "0.2"
              memory: "300M"
            limits:
              memory: "500M"
