k8s/apps/mailserver/manifests/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
  labels: &labels
    app.kubernetes.io/name: mailcalf
spec:
  selector: *labels
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
    - name: submission
      port: 587
      targetPort: submission
    - name: imaps
      port: 993
      targetPort: imaps
    - name: rspamd-admin
      port: 11334
      targetPort: rspamd-admin
    - name: sieve-manage
      port: 4190
      targetPort: sieve-manage
