k8s/apps/mailserver/manifests/mgmt-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailserver
spec:
  tls:
    - secretName: tls-mail.lly.sh
      hosts:
        - rspamd.mail.lly.sh
  rules:
    - host: rspamd.mail.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailserver
                port:
                  name: rspamd-admin
